feat: contact and footer page

--- a/src/assets/css/components/about.module.scss
+++ b/src/assets/css/components/about.module.scss
@@ -1,9 +1,9 @@
 .about {
-    background-color: beige;
+    background-color: #F8F8FF;
     color: black;
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-gap: 3rem;
     height: 98vh;
-    padding: 4rem;
+    padding: 6rem 4rem;
 }
