--- a/src/assets/css/components/menu.module.css
+++ b/src/assets/css/components/menu.module.css
@@ -12,7 +12,9 @@
     grid-template-columns: 1fr 1fr;
     justify-content: space-between;
     padding: 1rem 2rem;
-    position: sticky;
+    position: fixed;
+    z-index: 1000;
+    width: 100%;
 }
 
 .menuImage {
