--- a/src/assets/css/components/about.module.scss
+++ b/src/assets/css/components/about.module.scss
@@ -2,8 +2,16 @@
     background-color: #F8F8FF;
     color: black;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr;
     grid-gap: 3rem;
-    height: 98vh;
-    padding: 6rem 4rem;
+    min-height: 98vh;
+    padding: 6rem 2rem;
+}
+
+@media (min-width: 750px) {
+    .about {
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr;
+        padding: 6rem 4rem;
+    }
 }
