--- a/src/assets/css/components/contact.module.scss
+++ b/src/assets/css/components/contact.module.scss
@@ -5,7 +5,7 @@
     flex-direction: column;
     height: 100vh;
     margin: auto;
-    padding: 6rem 4rem;
+    padding: 6rem 2rem;
 
     h1 {
         text-align: center;
@@ -18,8 +18,8 @@
     border-radius: 0.5rem;
     display: flex;
     flex-direction: column;
-    margin: 0 25%;
-    padding: 3rem;
+    margin: 0;
+    padding: 2rem;
 
     button {
         background-color: #7843e9;
@@ -57,5 +57,22 @@
         height: 10rem !important;
         padding: 0.75rem;
         width: 100% !important;
+    }
+}
+
+@media (min-width: 650px) {
+    .contact {
+        padding: 6rem 4rem;
+    }
+
+    .contactForm  {
+        margin: 0 20%;
+        padding: 3rem;
+    }
+}
+
+@media (min-width: 1024px) {
+    .contactForm  {
+        margin: 0 25%;
     }
 }
